<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>
    <com.example.punit.popularmovies.Fonts.CustomBoldTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sort_by_txt"
        android:text="@string/sort_by_header"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/filter_header_margin_top"
        android:layout_marginLeft="@dimen/filter_header_margin_left"
        android:textStyle="bold"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sort_group"
        android:layout_marginTop="@dimen/filter_header_margin_top"
        android:layout_marginLeft="@dimen/filter_header_margin_left"
        android:orientation="horizontal">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/radio_btn_popular"
            android:id="@+id/popularity_sort"
            style="@style/ButtonStyle" />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:text="@string/radio_btn_rating"
            android:id="@+id/rate_sort"
            android:layout_marginLeft="30dp"
            style="@style/ButtonStyle"/>
    </RadioGroup>
    <com.example.punit.popularmovies.Fonts.CustomBoldTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/show_only_fav"
        android:text="@string/filter"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/filter_header_margin_top"
        android:layout_marginLeft="@dimen/filter_header_margin_left"
        android:textStyle="bold"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:button="@null"
        android:text="@string/fav_movies"
        android:id="@+id/fav_movies"
        android:layout_marginLeft="@dimen/filter_header_margin_left"
        android:layout_marginTop="@dimen/filter_header_margin_top"
        style="@style/ButtonStyle"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/apply_filters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/apply_filter_btn"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:background="@drawable/btn_back"
            android:visibility="invisible"
            android:layout_marginLeft="@dimen/apply_filter_left_right_margin"
            android:layout_marginRight="@dimen/apply_filter_left_right_margin"
            android:layout_marginBottom="@dimen/apply_filter_bottom_margin"/>
    </LinearLayout>

</LinearLayout>