<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:id="@+id/rl_internet"
    android:visibility="gone">
    <ImageView
        android:layout_width="@dimen/no_internet_image_width_height"
        android:layout_height="@dimen/no_internet_image_width_height"
        android:layout_centerHorizontal="true"
        android:src="@drawable/connection_lost"
        android:id="@+id/internet_lost_img"/>
    <com.example.punit.popularmovies.Fonts.CustomNormalTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connection_lost"
        android:layout_below="@+id/internet_lost_img"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:id="@+id/connection_lost_header"/>
    <com.example.punit.popularmovies.Fonts.CustomNormalTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connection_lost_header"
        android:layout_marginTop="7dp"
        android:text="@string/check_internet_settings"
        android:textColor="@color/colorGray"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:id="@+id/connection_check_txt"/>
    <com.example.punit.popularmovies.Fonts.CustomBoldTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connection_check_txt"
        android:id="@+id/OR_txt"
        android:text="@string/OR"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="7dp"/>
    <Button
        android:id="@+id/retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/OR_txt"
        android:text="@string/retry_api"
        style="@style/RetryButtonStyle"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>